@@ -1,6 +1,5 @@
 package frameworks_drivers.gemini;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
 import com.sun.net.httpserver.HttpServer;
@@ -14,14 +13,9 @@ import java.nio.file.Path;
 import java.util.concurrent.Executor;
 import java.util.concurrent.Executors;
 
-public class GeminiResponseReceiver {
+public class GeminiResponseReceiverDataAccessObject {
     private static HttpServer server;
-    private static final ObjectMapper MAPPER = new ObjectMapper();
 
-    /**
-     * Start a local HTTP server bound to 127.0.0.1:{port} that accepts POST /response/{id}.
-     * The POST body is written atomically to responsesDir/{id}.json.
-     */
     public static synchronized void startIfNeeded(int port, Path responsesDir) throws IOException {
         if (server != null) return;
 
@@ -42,13 +36,13 @@ public class GeminiResponseReceiver {
 
         @Override
         public void handle(HttpExchange exchange) {
-            try (exchange) {
+            try {
                 if (!"POST".equalsIgnoreCase(exchange.getRequestMethod())) {
                     exchange.sendResponseHeaders(405, -1);
                     return;
                 }
 
-                String path = exchange.getRequestURI().getPath(); // expected: /response/{id}
+                String path = exchange.getRequestURI().getPath();
                 String[] parts = path.split("/");
                 if (parts.length < 3 || parts[2].isEmpty()) {
                     exchange.sendResponseHeaders(400, -1);
@@ -56,18 +50,21 @@ public class GeminiResponseReceiver {
                 }
                 String id = parts[2];
 
+                byte[] body;
                 try (InputStream is = exchange.getRequestBody()) {
-                    byte[] body = is.readAllBytes();
-                    // write to tmp then move atomically
-                    Path tmp = responsesDir.resolve(id + ".json.tmp");
-                    Path out = responsesDir.resolve(id + ".json");
-                    Files.write(tmp, body);
-                    try {
-                        Files.move(tmp, out, java.nio.file.StandardCopyOption.ATOMIC_MOVE, java.nio.file.StandardCopyOption.REPLACE_EXISTING);
-                    } catch (IOException ex) {
-                        // Fallback to non-atomic move if atomic not supported
-                        Files.move(tmp, out, java.nio.file.StandardCopyOption.REPLACE_EXISTING);
-                    }
+                    body = is.readAllBytes();
+                }
+
+                Path tmp = responsesDir.resolve(id + ".json.tmp");
+                Path out = responsesDir.resolve(id + ".json");
+                Files.write(tmp, body);
+
+                try {
+                    Files.move(tmp, out,
+                            java.nio.file.StandardCopyOption.ATOMIC_MOVE,
+                            java.nio.file.StandardCopyOption.REPLACE_EXISTING);
+                } catch (IOException ex) {
+                    Files.move(tmp, out, java.nio.file.StandardCopyOption.REPLACE_EXISTING);
                 }
 
                 byte[] ok = "ok".getBytes();
@@ -75,7 +72,10 @@ public class GeminiResponseReceiver {
                 try (OutputStream os = exchange.getResponseBody()) {
                     os.write(ok);
                 }
+
             } catch (Exception ignored) {
+            } finally {
+                exchange.close();
             }
         }
     }
